 - Somatic variation output format: handle unrecognized sample-ids in the parents column.
 - discover-sequence-variants mode: add assertion to give hint to user that syntax is incorrect in for -s and -e options.
 - compact-file-stats mode: print progress when scanning reads files. Use a buffered reader to improve read file
   parsing performance.
2.2
 - Remove threshold effects when calling genotypes in several samples. Modified the filters to not remove bases in
   specific samples when the genotype survived filters in at least another sample (previous versions reported these
   threshold edge effects as differences, which could be confusing, this version simply shows the marginal raw base
   counts in samples where the genotype could have been filtered by a filter, which makes it easier to compare the
   strength of the genotype support across samples). This adjustment was done for both base genotype and indel genotypes.
 - LeftOverFilter: now uses minVariationSupport as minimum threshold.
 - Mode suggest-position-slices: add option number-of-bytes to suggest slices with a uniform number of compressed
   bytes. This option aims to provide more balanced slices in bases where the genome as very non uniform coverage
   by position. With this option, the number of slices is determined to yield slices that need to decompress about
   the amount of bytes indicated on the command line.    `
 - Framework API change: introduce class PositionToBasesMap<T> to use as type for positionToBases. The class provides
   methods to get the range of positions described in the map. This unfortunately requires changes to all clients/
   implementations of IterateSortedAlignments<T>.
 - Mode discover-sequence-variants: Fix various problems that prevented reporting genotypes for deletions (i.e., C/-).
 - Fix a potential NPE in GroupAssociations when samples are null.
 - Fix for issue #2, see https://github.com/CampagneLaboratory/goby/issues/2
 - Expose comparator in SortedAnnotations.