@@ -7,6 +7,7 @@
  - discover-sequence-variants mode: add assertion to give hint to user that syntax is incorrect in for -s and -e options.
  - compact-file-stats mode: print progress when scanning reads files. Use a buffered reader to improve read file
    parsing performance.
+ - discover-sequence-variants: remove left-over filter for somatic variations output format.
 2.2
  - Remove threshold effects when calling genotypes in several samples. Modified the filters to not remove bases in
    specific samples when the genotype survived filters in at least another sample (previous versions reported these
